--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
           content="Temukan undangan pernikahan simpel, menarik, dan kekinian untuk hari istimewa Anda.">
     <meta name="keywords"
           content="undangan pernikahan, template undangan, wedding invitation, desain undangan pernikahan, contoh undangan pernikahan HTML, CSS, JavaScript">
-    <meta name="author" content="Sandi Perdiansah">
+    <meta name="author" content="𝙆𝙀𝙆 𝕏 𝙋𝙧𝙤𝙟𝙚𝙘𝙩𝙨">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
@@ -15,8 +15,8 @@
     <meta property="og:description"
           content="Temukan undangan pernikahan simpel, menarik, dan kekinian untuk hari istimewa Anda.">
     <meta property="og:image"
-          content="https://sandiperdiansah.github.io/wedding-invitation/src/assets/images/couple.png">
-    <meta property="og:url" content="https://sandiperdiansah.github.io/wedding-invitation">
+          content="https://skuyykek69.github.io/invitation/src/assets/images/couple.png">
+    <meta property="og:url" content="https://skuyykek69.github.io/invitation">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -24,7 +24,7 @@
     <meta property="twitter:description"
           content="Temukan undangan pernikahan simpel, menarik, dan kekinian untuk hari istimewa Anda.">
     <meta property="twitter:image"
-          content="https://sandiperdiansah.github.io/wedding-invitation/src/assets/images/couple.png">
+          content="https://skuyykek69.github.io/invitation/src/assets/images/couple.png">
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://sandiperdiansah.github.io/wedding-invitation">
@@ -249,10 +249,10 @@
     <h2>Wassalamualaikum Warahmatullahi Wabarakatuh</h2>
     <h4> اَلْحَمْدُ للَّهِ رَبِّ الْعالَمِينَ</h4>
     <div>
-        <p>Build with <span>Sandi Perdiansah</span></p>
-        <a href="https://github.com/sdprdh">
+        <p>Build with <span>𝙆𝙀𝙆 𝕏 𝙋𝙧𝙤𝙟𝙚𝙘𝙩𝙨</span></p>
+        <a href="https://github.com/skuyykek69">
             <i class="bx bxl-github"></i>
-            <span>sandiperdiansah</span>
+            <span>𝙆𝙀𝙆 𝕏 𝙋𝙧𝙤𝙟𝙚𝙘𝙩𝙨</span>
         </a>
     </div>
 </footer>
