--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
     <h4> اَلْحَمْدُ للَّهِ رَبِّ الْعالَمِينَ</h4>
     <div>
         <p>Build with <span>𝙆𝙀𝙆 𝕏 𝙋𝙧𝙤𝙟𝙚𝙘𝙩𝙨</span></p>
-        <a href="https://github.com/skuyykek69">
+        <a href="https://thisonky.web.app">
             <i class="bx bxl-github"></i>
             <span>𝙆𝙀𝙆 𝕏 𝙋𝙧𝙤𝙟𝙚𝙘𝙩𝙨</span>
         </a>
